FIX: z-index on gallery slider on mobile view

--- a/components/App/Gallery/Gallery.module.scss
+++ b/components/App/Gallery/Gallery.module.scss
@@ -10,6 +10,11 @@ $pagination-dots: 18px;
     position: relative !important;
   }
 
+  :global(.swiper-wrapper),
+  .mediaWrapper {
+    z-index: 0;
+  }
+
   :global(.swiper-pagination-gallery) {
     height: styles.to-rem(42);
 
